[build-system]
requires = [
    "hatchling>=1.27.0",
    "hatch-vcs>=0.4.0",
]
build-backend = "hatchling.build"

[project]
name = "genibus"
dynamic = ["version"]
description = "Grundfos GENIBus protocol library"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
    { name = "Christoph Schueler" },
]
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "coverage[toml]>=7.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.0",
    "sphinx-autodoc-typehints>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/christoph2/GENIBus-Arduino"
Repository = "https://github.com/christoph2/GENIBus-Arduino"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/genibus"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = "^src/genibus/tests/"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["genibus"]
branch = true

