#AC_PREREQ([2.69])
AC_INIT([Genibus], [1.0], [cpu12.gems@googlemail.com])
AM_INIT_AUTOMAKE([-Wall foreign])
#LT_PREREQ([2.2])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
# AC_PROG_RANLIB
#AM_PROG_CC_C_O
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])

LT_INIT([dlopen])
#AC_PROG_AWK
#AC_PROG_LEX

# Checks for typedefs, structures, and compiler characteristics.
#AC_TYPE_UINT16_T
 
 
# Checks for library functions.
 
AC_CONFIG_FILES([Makefile])
AC_OUTPUT